# zabbix-portscan

./: .gitignore  README.md  pyproject.toml  requirements.txt  zabbix_portscan.yml
zabbix_portscan/: scanner.py
